# MixedQuadTree

./: .gitignore  README  generateQuadtreeMeshAlgo.md  notes.md  poster_V1.ppt  poster_V2.ppt  rebuild.sh
data/: a.poly  a_reg1.poly  a_square.poly  bar.oct  bar.poly  bar.vtk  bar1.oct  bar1.vtk  bar2.oct  bar2.vtk  box.poly  drawing.poly  drawing_ewco.poly  drawing_ewco.poly.vtk  drawing_mesh.poly  drawing_mesh.poly.vtk  element_to_refine.txt  lonso.oct  lonso.poly  lonso.vtk  pie.poly  quad_as_edges.mdl  sbar1.oct  sbar1.vtk  sbarA3.gmf  sbarA3.oct  sbarA3.vtk  sbar_adapt1.oct  sbar_adapt1.vtk  square.mdl  square.off  square_as_edges.mdl  square_as_polyline.mdl  square_with_hole.mdl  square_with_hole.off  start_bar.oct  start_bar.vtk  unit_square.mdl  unit_square.poly
doc/: Parallelize_library_comparison.md  Rapport.md  biblio.bib  reduction_algo.tex  roi2D.aux  roi2D.bbl  roi2D.blg  roi2D.out  roi2D.tex
poster/: poster.ppt  poster_V1.ppt  poster_V1_auto.ppt
script/: analyse_time.sh  massif_analyser.awk  memory_usage.sh  mesherTest.sh  plot_mesher_time.py  plot_time.py
script/analyse_time_2019-03-07_14:39:03/: time_size_10000000_thread_1.txt  time_size_10000000_thread_2.txt  time_size_10000000_thread_4.txt  time_size_10000000_thread_8.txt  time_size_1000000_thread_1.txt  time_size_1000000_thread_2.txt  time_size_1000000_thread_4.txt  time_size_1000000_thread_8.txt  time_size_100000_thread_1.txt  time_size_100000_thread_2.txt  time_size_100000_thread_4.txt  time_size_100000_thread_8.txt  time_size_10000_thread_1.txt  time_size_10000_thread_2.txt  time_size_10000_thread_4.txt  time_size_10000_thread_8.txt  time_size_1000_thread_1.txt  time_size_1000_thread_2.txt  time_size_1000_thread_4.txt  time_size_1000_thread_8.txt  time_size_100_thread_1.txt  time_size_100_thread_2.txt  time_size_100_thread_4.txt  time_size_100_thread_8.txt
script/analyse_time_2019-03-20_17:51:37/: time_size_100000000_thread_2.txt  time_size_100000000_thread_4.txt  time_size_100000000_thread_8.txt  time_size_10000000_thread_1.txt  time_size_10000000_thread_2.txt  (+22 more)
src/: CMakeLists.txt  EdgeInfo.cpp  EdgeInfo.h  FEMesh.h  FaceDiagonal.cpp  GeometricTransform.cpp  GeometricTransform.h  GridMesher.cpp  GridMesher.h  Main.cpp  MeshPoint.cpp  MeshPoint.h  Mesher.cpp  Mesher.cpp.orig  Mesher.h  Mesher_bug.cpp  Octant.cpp  Octant.h  Point3D.cpp  Point3D.h  PolyEdge.cpp  PolyEdge.h  Polyline.cpp  Polyline.h  QuadEdge.cpp  QuadEdge.h  QuadSurfTemplate.cpp  QuadSurfTemplate.h  QuadTransition.cpp  QuadTransition.h  Quadrant.cpp  Quadrant.h  RefinementAllRegion.cpp  RefinementAllRegion.h  RefinementBoundaryRegion.cpp  RefinementBoundaryRegion.h  RefinementCubeRegion.cpp  RefinementCubeRegion.h  RefinementDrawingRegion.cpp  RefinementDrawingRegion.h  (+20 more)
src/MeanTimePerformance/: Main.cpp
src/MesherParallel/: README.md  SplitVisitorOpenMP.cpp  SplitVisitorReductionOpenMP.cpp  SplitVisitorReductionOpenMP.h  refineMesh.hpp  refineMeshOpenMP.hpp  refineMeshTBB.hpp
src/MesherParallel/ParallelCustomReductionTBB/: ParallelReduceTBB.hpp
src/MesherParallel/ParallelCustomReductionTBBV2/: ParallelReduceTBBV2.hpp
src/MesherParallel/ParallelCustomReductionTBBV3/: CustomSplitVisitorV3.cpp  CustomSplitVisitorV3.h  ParallelReduceTBBV3.hpp
src/MesherParallel/ParallelCustomReductionV2TBB/: ParallelReduceTBBV2.hpp
src/MesherParallel/ParallelReductionTBB/: ParallelReduceTBB.hpp
src/MesherParallel/ParallelTest1TBB/: SplitVisitorTest1TBB.cpp  SplitVisitorTest1TBB.h
src/MesherParallel/ReductionOpenMP/: SplitVisitorOpenMP.cpp  SplitVisitorOpenMP.h
src/ParallelizeTest/: CPUInfo.hpp  ParallelizeTest.cpp  TimeDecorator.hpp
src/ParallelizeTest/CloneMesher/: Mesher.cpp  MesherTest1.cpp  ParallelReduceTBB.hpp  SplitVisitorNoCounterWithConcurrentSet.cpp  SplitVisitorNoCounterWithConcurrentSet.h  SplitVisitorTest1.cpp  SplitVisitorTest1.h
src/ParallelizeTest/Join/: CustomSplitVisitor.cpp  CustomSplitVisitor.h  ParallelReduceOpenMP.hpp  ParallelReduceTBB.hpp  ParallelReduceTBBV2.hpp
src/Visitors/: EdgeVisitor.cpp  EdgeVisitor.h  IntersectionsVisitor.cpp  IntersectionsVisitor.h  OneIrregularVisitor.cpp  OneIrregularVisitor.h  PointMovedVisitor.cpp  PointMovedVisitor.h  RemoveSubElementsVisitor.cpp  RemoveSubElementsVisitor.h  SplitVisitor.cpp  SplitVisitor.h  SurfaceTemplatesVisitor.cpp  SurfaceTemplatesVisitor.h  TransitionPatternVisitor.cpp  TransitionPatternVisitor.h  Visitor.cpp  Visitor.h
(+168 files in other folders)
